--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -349,6 +349,8 @@
         "\n",
         "start_time = time.time()\n",
         "\n",
+        "# ChatGPT double checked query\n",
+        "\n",
         "result = spark.sql(\"\"\"\n",
         "SELECT\n",
         "    view,\n",
